Agregar prueba para actualizar tarea y guardar comentario
Se agregó una nueva prueba en TareaServiceImplTest para verificar la actualización de una tarea y el guardado de un comentario con menciones. Se hicieron cambios de soporte en los constructores de datos de prueba y se corrigió la generación aleatoria de números para los IDs de usuario y propietario, evitando valores negativos. También se hizo pública la función generarMensajeCambiosTarea para permitir su prueba.